<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewValorReal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/qual_o_valor_em_real"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextNumberReal"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textAlignment="center"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewValorDolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/valor_em_dolar" />

    <TextView
        android:id="@+id/textViewResultadoDolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/black"
        android:text="@string/numero_dolar"
        android:textColor="@color/Green"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewValorEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/valor_em_euro" />

    <TextView
        android:id="@+id/textViewResultadoEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/numero_euro"
        android:textColor="@color/Green"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/Green"
        android:text="@string/calcular"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp" />


</LinearLayout>